<resources>
    <string name="app_name" translatable="false">HW-Android-School</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="min_value_label">Minimum value</string>
    <string name="max_value_label">Maximum value</string>
    <string name="quantity_label">Quantity:</string>
    <string name="decimal_places_label">Decimal places:</string>
    <string name="result_label">Result:</string>
    <string name="random_button">Generate</string>
    <string name="copy_button">Copy to clipboard</string>
    <string name="not_repeating_check_box">Non repeating numbers</string>
    <string name="copy_toast">Copied to Clipboard!</string>
    <string name="error_generate_toast">ERROR! Maximum value should be larger than Minimum value</string>
    <string name="error_copy_toast">ERROR! Result is empty</string>
    <string name="error_quantity_generate_toast">ERROR! Cannot generate a selected number of non repeated numbers</string>
    <string name="error_parse_toast">ERROR! Minimum and Maximum values should be in the range from -4 611 686 018 427 387 904 to 4 611 686 018 427 387 903</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hw2_fragment">HW2 Fragment</string>
    <string name="hw1_button">HW1 (Random generator)</string>
    <string name="hw2_button">HW2</string>
    <string name="new_activity_button">New Activity</string>
    <string name="stack_activity_button">Stack Activity</string>
    <string name="stack_fragment_button">Stack Fragment</string>
    <string name="activity2_button">Activity 2</string>
    <string name="activity1_button">Activity 1</string>
    <string name="activity3_button">Activity 3</string>
    <string name="activity3_label">Activity 3</string>
    <string name="activity1_label">Activity 1</string>
    <string name="activity2_label">Activity 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment2_button">Fragment 2</string>
    <string name="fragment3_button">Fragment 3</string>
    <string name="fragment1_button">Fragment 1</string>
    <string name="fragment1_label">Fragment 1</string>
    <string name="fragment2_label">Fragment 2</string>
    <string name="fragment3_label">Fragment 3</string>
    <string name="hw3_button">HW3</string>
    <string name="linear_button">Linear</string>
    <string name="relative_button">Relative</string>
    <string name="frame_button">Frame</string>
    <string name="grid_button">Grid</string>
    <string name="submit_button">Submit</string>
    <string name="transfer_text">Text for transfer</string>
    <string name="title_transfer_label" />
    <string name="transfer_button">Transfer</string>
    <string name="hw4_button">HW4</string>
    <string name="ok_button">OK</string>
    <string name="no_extra">No Extra</string>
    <string name="no_result">No Result</string>
    <string name="load_image_button">Load Image</string>
    <string name="no_camera">No Camera</string>
    <string name="no_sdcard_access">No SD Card</string>
    <string name="play_market_button">Play Market</string>
    <string name="load_camera_button">Camera</string>
    <string name="hw5_button">HW5</string>
    <string name="hw6_button">HW6</string>
    <string name="hw7_button">HW7</string>
    <string name="hw8_button">HW8</string>
    <string name="hw9_button">HW9</string>
    <string name="save_in_file_button">Save in File</string>
    <string name="save_in_shared_preferences_button">Save in SharedPreferences</string>
    <string name="edit_text_for_save">Text for save</string>
    <string name="phone_book_button">Phone Book</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone number</string>
    <string name="enter_contact">Enter contact</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
