<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dmitry.hws_android_school.ui.random_generator.RandomGeneratorFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_value_label"
                    android:inputType="numberSigned"
                    android:maxLength="14"
                    android:nextFocusDown="@+id/max_value_text" />

                <EditText
                    android:id="@+id/max_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/max_value_label"
                    android:inputType="numberSigned"
                    android:maxLength="13" />

            </LinearLayout>

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label"
                android:textSize="@dimen/label_text_size" />

            <SeekBar
                android:id="@+id/quantity_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:max="24"
                android:progress="0" />

            <TextView
                android:id="@+id/decimal_places_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_places_label"
                android:textSize="@dimen/label_text_size" />

            <SeekBar
                android:id="@+id/decimal_places_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:max="6"
                android:progress="0" />

            <CheckBox
                android:id="@+id/not_repeating_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:text="@string/not_repeating_check_box" />

            <TextView
                android:id="@+id/result_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_label"
                android:textSize="@dimen/label_text_size" />

            <TextView
                android:id="@+id/result_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextResult"
                android:textSize="@dimen/result_text_size" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/random_button"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy_button"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>