<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.dmitry.hw_android_school.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_value_label"
                    android:inputType="numberSigned"
                    android:nextFocusDown="@+id/max_value_text" />

                <EditText
                    android:id="@+id/max_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/max_value_label"
                    android:inputType="numberSigned" />

            </LinearLayout>

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/quantity_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:max="24"
                android:progress="0" />

            <CheckBox
                android:id="@+id/not_repeating_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/not_repeating_check_box"/>

            <!--        <TextView
                        android:id="@+id/decimal_places_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decimal_places_label"
                        android:textSize="18sp" />

                    <SeekBar
                        android:id="@+id/decimal_places_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="6"
                        android:progress="0"
                        android:layout_marginBottom="14dp" />-->

            <TextView
                android:id="@+id/result_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/result_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextResult"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/random_button" />

        <Button
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/copy_button" />

    </LinearLayout>

</LinearLayout>