<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmitry.hw_android_school.BlankFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/min_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:nextFocusDown="@+id/max_value_text"
                android:hint="@string/min_value_label"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/max_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:hint="@string/max_value_label"
                android:inputType="numberSigned" />

        </LinearLayout>

        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/quantity_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="24"
            android:progress="0"
            android:layout_marginBottom="14dp"/>

<!--        <TextView
            android:id="@+id/decimal_places_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimal_places_label"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/decimal_places_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="6"
            android:progress="0"
            android:layout_marginBottom="14dp" />-->

        <TextView
            android:id="@+id/result_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextResult" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="28dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/random_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/random_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
